--- a/oauth2-token/pom.xml
+++ b/oauth2-token/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.wkennedy</groupId>
-	<artifactId>section_5_1</artifactId>
+	<artifactId>oauth2-token</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
